# ft_ls

./: CMakeLists.txt  Makefile  avl.c  avl_del.c  balance_avl.c  file2  ft_ls  ft_ls.h  ft_ls.h.gch  ft_lsb  get_data.c  get_data_subtree.c  main.c  out_put.c  out_put_permissions.c  parse.c  sort_args.c  util.c
avl_tree/: avltree.h  balance.c  creat_and_insert.c  free_avl.c  utils.c
dir/: test
ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
